style.css
:root {
  --ui-grey: #6E6D70;
  --ui-dark: #181717;
  --ui-light: #EEEEEE;
  --ui-border: #b3b3b3;
  --toggle-gpx: #8b5cf6;
  --toggle-points: #3b82f6;
  --toggle-areas: orange;
}

body {
	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
	font-size: 12px;
	line-height: 1.5;
	margin: 0;
}

#map {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 250px;
}

#sidebar {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	width: 250px;
	background: var(--ui-light);
	padding: 10px;
	overflow-y: auto;
	box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
	z-index: 1000;
}

#sidebar h3 {
	margin-top: 60px;
	margin-bottom: 20px;
	font-weight: bold;
	font-size: 18px;
	text-align: center;
}

.leaflet-popup-content {
	position: relative;
}

.popup-delete {
	position: absolute;
	bottom: -10px;
	right: -15px;

	background: none;
	border: none;

	font-size: 14px;
	opacity: 0.5;
	cursor: pointer;
}

.popup-delete:hover {
	opacity: 1;
}


.popup-footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-top: 6px;
}

.popup-stats {
	font-size: 12px;
	color: #444;
}

.modal {
	display: none;
	position: fixed;
	z-index: 2000;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	justify-content: center;
	align-items: center;
}

.modal-content {
	background: white;
	padding: 25px;
	border-radius: 8px;
	width: 420px;
	max-width: 90%;
	box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);

	display: flex;
	flex-direction: column;
	gap: 10px;
}

.modal-content input,
.modal-content select,
.modal-content textarea {
	width: 100%;
	padding: 6px;
	font-size: 14px;
}

.modal-buttons {
	margin-top: 10px;
	display: flex;
	justify-content: flex-end;
	gap: 10px;
}

#openGPXModal {
	width: 100%;
	padding: 20px 14px;
	margin-top: 26px;
	background: #6E6D70;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	font-weight: 600;
	cursor: pointer;
	transition: all 0.2s ease;
}

#openGPXModal:hover {
	background: transparent;
	color: #181717;
	outline: 3px #181717 solid;
}


#newType {
	background: #6E6D70;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	transition: all 0.2s ease;
    cursor: pointer;
}

#startAdd {
	background: #6E6D70;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	transition: all 0.2s ease;
	padding: 2px 14px;
    cursor: pointer;
}

#difficulty {
	background: #6E6D70;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	transition: all 0.2s ease;
    cursor: pointer;
}

#gaz {
	background: #6E6D70;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	transition: all 0.2s ease;
    cursor: pointer;
}

#applyFilters {
	background: var(--ui-grey);
	padding: 2px 14px;
	color: white;
	border: none;
	border-radius: 8px;
	font-size: 14px;
	transition: all 0.2s ease;
    cursor: pointer;
}

#gaz:hover, #applyFilters:hover, #difficulty:hover, #startAdd:hover, #newType:hover {
	background: transparent;
	color: var(--ui-dark);
	outline: 1px var(--ui-dark) solid;
}

#newTypeBox, #filtersBox, #layersBox {
	outline: 2px var(--ui-border) solid;
	border-radius: 8px;
	margin-top: 26px;
    padding-bottom: 5px;
    padding-left: 5px;
}



/* -------------------------------
 * CREATING SLIDERS FOR LAYERS BOX
/* ------------------------------- */

.toggle {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 8px;
  cursor: pointer;
}

.toggle input {
  display: none;
}

.slider {
  width: 46px;
  height: 24px;
  background: var(--ui-border);
  border-radius: 12px;
  position: relative;
  transition: 0.3s;
}

.slider::before {
  content: "";
  position: absolute;
  width: 20px;
  height: 20px;
  top: 2px;
  left: 2px;
  border-radius: 50%;
  background: white;
  transition: 0.3s;
  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
}

#toggleGPX:checked + .slider { background: var(--toggle-gpx); }
#togglePoints:checked + .slider { background: var(--toggle-points); }
#toggleAreas:checked + .slider { background: var(--toggle-areas); }

.toggle input:checked + .slider::before {
  transform: translateX(22px);
}

.label-text {
  font-size: 12px;
}

